Fix activity cards size on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,10 @@ ul {
     .hosting-thumbnail-card {
         width: 90%;
     }
+
+    .showmore-link {
+        padding-left: 17px;
+    }
 }
 
 /* Hosting */
@@ -274,7 +278,7 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 22%;
     height: 500px;
     border-radius: 15px;
@@ -305,6 +309,7 @@ ul {
     border-radius: 10px;
     height: 35%;
     box-shadow: 0 0 20px #0000001f;
+    margin-top: 1.5rem;
 }
 
 .imgActivity3 {
@@ -335,7 +340,7 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 22%;
     height: 500px;
     border-radius: 15px;
@@ -366,6 +371,7 @@ ul {
     border-radius: 10px;
     height: 55%;
     box-shadow: 0 0 20px #0000001f;
+    margin-top: 1.5rem;
 }
 
 .imgActivity6 {
@@ -383,6 +389,7 @@ ul {
         padding: 7px;
         margin: 1rem;
         margin-left: 2rem;
+        padding-left: 17px;
     }
 
     .activity-section-card-container {
@@ -395,6 +402,14 @@ ul {
     .activity-section-card-container a,
     .activity-section-card-container div {
         width: 90%;
+    }
+
+    .activity-section-card-container a {
+        height: 14rem;
+    }
+
+    .activity-section-card-container img {
+        height: 73%;
     }
 
     .activity-section-card-container div a {
